# no_std_Embedded_Rust

./: README.md
training_no_std_rust/: README.md
training_no_std_rust/a01_no_std_hello_world/: Cargo.toml
training_no_std_rust/a01_no_std_hello_world/src/: main.rs
training_no_std_rust/a02_no_std_array/: Cargo.toml  README.md
training_no_std_rust/a02_no_std_array/src/: main.rs
training_no_std_rust/a03_io_write/: Cargo.toml
training_no_std_rust/a03_io_write/src/: main.rs
