[package]
name = "a02_no_std_array"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
arrayvec = { version = "0.7.4", default-features = false}
numtoa = "0.2.4"
